log
Wed 23 Aug 2023 09:57:16 PM UTC: 
 tests:  0|6
total_score: 0/70
7dc9a01
Wed 23 Aug 2023 10:01:31 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
374b22d
Wed 23 Aug 2023 10:03:47 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5e4319e
Wed 23 Aug 2023 10:08:58 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:57:8: error: redefinition of ‘nextList’
   57 | void * nextList(List * list) {
      |        ^~~~~~~~
list.c:49:7: note: previous definition of ‘nextList’ with type ‘void *(List *)’ {aka ‘void *(struct List *)’}
   49 | void *nextList(List *list){
      |       ^~~~~~~~
Compilation failed
12da28a
Wed 23 Aug 2023 10:09:18 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  5|4
total_score: 25/70
662a18b
Wed 23 Aug 2023 10:12:37 PM UTC: 
 list.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
f379b97
Wed 23 Aug 2023 10:16:22 PM UTC: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  10|2
total_score: 45/70
0a61184
Wed 23 Aug 2023 10:20:06 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  11|1
total_score: 55/70
fbe7350
